init main screen groundwork
load fonts, set up splashscreen, add SafeAreaView & padding subcontainer; will experiment to find exact fonts needed later

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
