--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-dotenv": "^3.4.8"
+    "react-native-dotenv": "^3.4.8",
+    "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
