--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "lab-3-template",
+  "name": "clock",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
@@ -18,7 +22,12 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+
+    "@testing-library/react-native": "^12.0.1",
+    "react-test-renderer": "^18.2.0",
+    "jest": "^29.5.0",
+    "jest-expo": "^48.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
